added basic structure of project

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
-<div>
-  <h1>AltruSight</h1>
-</div>
+<section class="main-container">
+  <!--TOOLBAR / NAV BAR HERE-->
+  <section class="nav-bar">
+  </section>
+
+  <!--ROUTER OUTLET-->
+  <!--Make this scroll so nav bar always stays static at top-->
+  <section class="content-scroll-container">
+    <router-outlet></router-outlet>
+  </section>
+</section>
