--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+html, body { 
+    margin: 0; 
+    padding: 0; 
+    height: 100%;
+    width: 100%;
+}
+h1 { 
+    margin: 0;
+    padding: 0;
+}
