added basic containers for social sidenav

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,19 +2,19 @@ h1 {
     text-align: center;
 }
 .main-container {
-    height: 100vh;
+    height: 100%;
     display: flex;
     flex-direction: column;
+    flex: 1;
     background-color: grey;
 }
 .nav-bar {
+    height: 10%;
     flex: 0.1;
     background-color: blue;
 }
 .content-scroll-container {
-    height: 90vh;
-    display: flex;
+    height: 90%;
     flex: 0.9;
-    flex-direction: column;
-    background-color: green;
+    background-color: aqua;
 }
