--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,6 +4,12 @@
         mode="side" 
         position="end"
         [opened]="sidenavOpened">
+        <div class="card-container">
+            <div class="section1"><p>section1</p></div>
+            <div class="section2"><p>section2</p></div>
+            <div class="section3"><p>section3</p></div>
+            <div class="section4"><p>section4</p></div>
+        </div>
     </mat-sidenav>
 
     <mat-sidenav-content class="main-content-container">
