added basic favorites card to social sidebar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
-<section class="main-container">
+<div class="main-container">
   <!--TOOLBAR / NAV BAR HERE-->
-  <section class="nav-bar">
-  </section>
+  <div class="nav-bar">
+  </div>
 
   <!--ROUTER OUTLET-->
   <!--Make this scroll so nav bar always stays static at top-->
-  <section class="content-scroll-container">
+  <div class="content-scroll-container">
     <router-outlet></router-outlet>
-  </section>
-</section>
+  </div>
+</div>
