--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,20 +1,48 @@
 <mat-sidenav-container class="sidenav-container">
+    <!--SOCIAL BAR CONTENT GOES HERE-->
     <mat-sidenav 
         class="sidenav-content-container" 
         mode="side" 
         position="end"
         [opened]="sidenavOpened">
         <div class="card-container">
-            <div class="section1"><p>section1</p></div>
+            <div class="section1">
+                <mat-card class="profile-card">
+                    <mat-card-title-group>
+                        <mat-card-header>
+                            <img mat-card-avatar src="{{getProfilePictureURL()}}"/>
+                            <mat-card-title>
+                                {{getUsername()}}
+                            </mat-card-title>
+                            <mat-card-subtitle>
+                                Edit Profile Link
+                            </mat-card-subtitle>
+                        </mat-card-header>
+                    </mat-card-title-group>
+                    <mat-divider></mat-divider>
+                    <mat-card-content>
+                        <p>Your Favorite Nonprofits</p>
+                        <div class="fav-container">
+                            <button mat-stroked-button class="fav" *ngFor="let nonprofit of getFavoriteNonprofits().slice(0, 4)">
+                                {{nonprofit}}
+                            </button>
+                        </div>
+                        <button mat-raised-button color="primary" class="more-favorites-button">More</button>
+                    </mat-card-content>
+                </mat-card>
+            </div>
             <div class="section2"><p>section2</p></div>
             <div class="section3"><p>section3</p></div>
             <div class="section4"><p>section4</p></div>
         </div>
     </mat-sidenav>
 
+    <!--HOME PAGE CONTENT GOES HERE-->
     <mat-sidenav-content class="main-content-container">
         <div class="main-content">
-            <p>HELLO</p>
+            <div class="payment-feed-container">
+                <p>PAYMENT FEED</p>
+            </div>
         </div>
 
         <button (click)="toggleSideNavOpened()" class="vertical-toggle-button">
