--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -12,24 +12,21 @@
     flex: 1;
     height: 100%;
     width: 40%;
-    background-color: #deb887;
+    background-color: #00796B;
     .card-container {
         margin-left: 2%;
         margin-right: 2%;
         height: 100%;
         display: flex;
         flex-direction: column;
-        justify-content: space-evenly;
+        justify-content: space-around;
         .section1 {
             height: 100%;
             display: flex;
             flex-direction: column;
-            flex: 0.15;
+            flex: 0.2;
             .profile-card {
                 flex: 1;
-                .mat-card-title-group {
-                    justify-content: flex-start;
-                }
                 .mat-card-content {
                     display: flex;
                     flex-direction: column;
@@ -37,31 +34,63 @@
                     .fav-container {
                         display: flex; 
                         flex-direction: row;
-                        justify-content: space-between;
+                        flex-wrap: wrap;
+                        justify-content: space-evenly;
                         .fav {
-                            flex: 0.23;
                             text-align: center;
                             border: 1px solid black;
                             margin-bottom: 2%;
                         }
                     }
-                    .more-favorites-button {
-                        flex: 0.92;
-                    }
                 }
             }
         }
         .section2 {
-            flex: 0.2;
-            background-color: powderblue;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            flex: 0.1;
+            .friends-card {
+                flex: 1;
+                .friends-container {
+                    display: flex;
+                    flex-direction: row;
+                    flex-wrap: wrap;
+                    justify-content: space-evenly;
+                }
+                .mat-card-footer {
+                    text-align: center;
+                }
+            }
         }
         .section3 {
-            flex: 0.2;
-            background-color: greenyellow;
+            height: 100%;
+            display: flex;
+            flex: 0.1;
+            flex-direction: column;
+            .progress-bar-card {
+                flex: 1;
+                .mat-card-content {
+                    display: flex;
+                    flex-direction: column;
+                    .mat-progress-bar {
+                        height: 2vh;
+                    }
+                }
+                .mat-card-footer {
+                    text-align: center;
+                }
+            }
         }
         .section4 {
+            height: 100%;
+            display: flex;
+            flex-direction: column;
             flex: 0.2;
-            background-color: thistle;
+            .account-stats-card {
+                text-align: center;
+                flex: 1;
+            }
         }
     }
 }
@@ -80,11 +109,16 @@
         .payment-feed-container {
             width: 90%;
             flex: 0.9;
-            background-color: antiquewhite;
+            background-color: #00BFA5;
+            border-radius: 20px;
         }
     }
     .vertical-toggle-button {
         min-width: 3vh;
+        background-color: #00BFA5;
+    }
+    .vertical-toggle-button:hover {
+        background-color: #A7FFEB;
     }
 }
 
