started working on login page

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,5 +1,5 @@
 .home-main-container {
-    height: 100vh;
+    height: 100%;
     align-items: stretch;
     flex: 1;
     background-color: orange;
