--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -1,2 +1,11 @@
+<!-- 
 <div class="login-main-container">
+
+
+</div>
+-->
+<div class="main-container-login">
+    <div class="login-container-RT">
+        fsdf
+    </div>
 </div>
