--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,17 +2,24 @@ h1 {
     text-align: center;
 }
 .main-container {
-    height: 100vh;
+    height: 100%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     background-color: grey;
 }
 .nav-bar {
-    flex: 0.1;
+    height: 5rem;
+    width: 100%;
     background-color: blue;
+
+    // Rafa changes
+    position: fixed;
+    z-index: 1;
 }
 .content-scroll-container {
-    height: 90vh;
+    height: 100%;
+    width: 100%;
     display: flex;
     flex: 0.9;
     flex-direction: column;
