--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -12,7 +12,7 @@
     flex: 1;
     height: 100%;
     width: 40%;
-    background-color: #00796B;
+    background-color: green; 
     .card-container {
         margin-left: 2%;
         margin-right: 2%;
