Fixed issues pointed out in the review

--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -19,7 +19,7 @@
                     <mat-label>Email</mat-label>
                     <input #userEmail matInput placeholder="Enter Your Email">
                     <mat-icon matSuffix>email</mat-icon>
-                    <mat-error *ngIf="loginError">Some Erro Message</mat-error>
+                    <mat-error *ngIf="loginError">Some Error Message</mat-error>
                 </mat-form-field>
     
                 <!-- Password input -->
@@ -37,7 +37,7 @@
 
                 <!-- Register container -->
                 <div class="register-with-us">
-                    Don't have an account with us yet? Register <a href="/login"> here! </a>
+                    Don't have an account with us yet? Register <a href="/register"> here! </a>
                 </div>
 
             </div>
