--- a/src/app/user/register/register.component.html
+++ b/src/app/user/register/register.component.html
@@ -13,7 +13,7 @@
                     <mat-label>Email</mat-label>
                     <input #userEmail matInput placeholder="Enter a Valid Email Address">
                     <mat-icon matSuffix>email</mat-icon>
-                    <mat-error *ngIf="registerError">Some Erro Message</mat-error>
+                    <mat-error *ngIf="registerError">Some Error Message</mat-error>
                 </mat-form-field>
     
                 <!-- Password input -->
@@ -23,7 +23,6 @@
                     <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
                         <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                     </button>
-                    <mat-hint>Use 8 or more characters with atleast one letter, number & symbol</mat-hint>
                 </mat-form-field>
 
                 <mat-form-field appearance="outline">
@@ -32,6 +31,7 @@
                     <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
                         <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                     </button>
+                    <mat-hint>Use 8 or more characters with atleast one letter, number & symbol</mat-hint>
                 </mat-form-field>
 
                 <!-- Sign in button -->
