--- a/src/app/user/login/login.component.scss
+++ b/src/app/user/login/login.component.scss
@@ -1,3 +1,22 @@
+.loading-screen {
+    position:absolute;
+    top:0;
+    left:0;
+    height:0;
+    bottom:0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    background-color: #FBFAF5;
+    z-index: 10;
+    
+    .loading-spinner {
+        display: flex;;
+        margin: auto;
+    }
+
+}
+
 .main-container-login {
     display: flex;
     background-color: orange;
@@ -26,8 +45,16 @@
             // background-color: green;
             margin: auto;
 
+            .signin-error {
+                text-align: center;
+                width: 100%;
+                font-weight: bold;
+                color: #ff0033;
+            }
+
             .login-title {
                 width: 100%;
+                text-align: center;
                 // background-color: lightgreen;
             }
 
