added links to placeholder pages from social sidebar

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -6,6 +6,10 @@
     background-color: orange;
 }
 
+.card-title-button {
+    font-size: 25px;
+}
+
 .sidenav-content-container {
     display: flex;
     flex-direction: column;
