--- a/src/app/user/account-stats-page/account-stats-page.component.html
+++ b/src/app/user/account-stats-page/account-stats-page.component.html
@@ -1,1 +1,10 @@
-<p>account-stats-page works!</p>
+<div class="main-container">
+    <div class="progress-container">
+        <h1 class="title">Goal Progress</h1>
+    </div>
+    
+    <div class="other-stats-container">
+        <h1 class="title">Other Account Stats</h1>
+    </div>
+</div>
+
