added default styling of placeholder pages

--- a/src/app/user/profile-page/profile-page.component.html
+++ b/src/app/user/profile-page/profile-page.component.html
@@ -1,1 +1,5 @@
-<p>profile-page works!</p>
+<div class="main-container">
+    <div class="profile-container">
+        <h1 class="title">Your Profile</h1>
+    </div>
+</div>
