--- a/src/app/user/favorite-nonprofits/favorite-nonprofits.component.html
+++ b/src/app/user/favorite-nonprofits/favorite-nonprofits.component.html
@@ -1,1 +1,5 @@
-<p>favorite-nonprofits works!</p>
+<div class="main-container">
+    <div class="favorites-container">
+        <h1 class="title">Your Favorited Nonprofits</h1>
+    </div>
+</div>
