--- a/src/app/user/friends-page/friends-page.component.html
+++ b/src/app/user/friends-page/friends-page.component.html
@@ -1,1 +1,5 @@
-<p>friends-page works!</p>
+<div class="main-container">
+    <div class="friends-container">
+        <h1 class="title">Your Friends</h1>
+    </div>
+</div>
