nonprofit page displays nonprofit id (name) when accessed from sidebar

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -21,7 +21,7 @@
                     <mat-card-content>
                         <p>Your Favorite Nonprofits</p>
                         <div class="fav-container">
-                            <button mat-stroked-button class="fav" *ngFor="let nonprofit of getFavoriteNonprofits().slice(0, 4)">
+                            <button (click)="navigateToNonprofit(nonprofit)" mat-stroked-button class="fav" *ngFor="let nonprofit of getFavoriteNonprofits().slice(0, 4)">
                                 {{nonprofit}}  
                             </button>
                         </div>
