--- a/src/app/nonprofit/nonprofit-page/nonprofit-page.component.html
+++ b/src/app/nonprofit/nonprofit-page/nonprofit-page.component.html
@@ -1,1 +1,5 @@
-<p>nonprofit-page works!</p>
+<div class="main-container">
+    <div class="favorites-container">
+        <h1 class="title">{{nonprofitName}} Page</h1>
+    </div>
+</div>
