Mostly implemented error checking when register

--- a/src/app/user/register/register.component.scss
+++ b/src/app/user/register/register.component.scss
@@ -26,6 +26,8 @@
 
             .register-title {
                 width: 100%;
+                text-align: center;
+
             }
 
             .register-inputs {
