--- a/src/app/user/register/register.component.html
+++ b/src/app/user/register/register.component.html
@@ -7,36 +7,44 @@
             </div>
 
             <!-- Container for register inputs-->
-            <div class="register-inputs">
+            <form [formGroup]="registerForm" class="register-inputs">
                 <!-- Email input -->
                 <mat-form-field appearance="outline">
                     <mat-label>Email</mat-label>
-                    <input #userEmail matInput placeholder="Enter a Valid Email Address">
+                    <input [formControl]="userEmailControl" matInput placeholder="Enter a Valid Email Address">
                     <mat-icon matSuffix>email</mat-icon>
-                    <mat-error *ngIf="registerError">Some Error Message</mat-error>
+                    <mat-error *ngIf="userEmailControl.hasError('required')">Please enter an email address</mat-error>
+                    <mat-error *ngIf="userEmailControl.hasError('email')">Please enter a <b>valid</b> email address </mat-error>
                 </mat-form-field>
     
-                <!-- Password input -->
-                <mat-form-field appearance="outline">
-                    <mat-label>Password</mat-label>
-                    <input #userPassword matInput [type]="hide ? 'password' : 'text'">
-                    <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-                        <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-                    </button>
-                </mat-form-field>
+                <div formGroupName="userPasswordsGroup">
+                    <!-- Password input -->
+                    <mat-form-field appearance="outline">
+                        <mat-label>Password</mat-label>
+                        <input [formControl]="userPasswordControl" matInput [type]="hide ? 'password' : 'text'">
+                        <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+                            <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                        </button>
+                        <mat-error *ngIf="userPasswordControl.hasError('required')">Please enter a password</mat-error>
+                    </mat-form-field>
 
-                <mat-form-field appearance="outline">
-                    <mat-label>Confirm</mat-label>
-                    <input #userConfirmPassword matInput [type]="hide ? 'password' : 'text'">
-                    <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-                        <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-                    </button>
-                    <mat-hint>Use 8 or more characters with atleast one letter, number & symbol</mat-hint>
-                </mat-form-field>
+                    <mat-form-field appearance="outline">
+                        <mat-label>Confirm</mat-label>
+                        <input [formControl]="userPasswordConfirmControl" matInput [type]="hide ? 'password' : 'text'" [errorStateMatcher]="confirmPasswordsMatch">
+                        <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+                            <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                        </button>
+                        <!-- <mat-error *ngIf="userPasswordConfirmControl.hasError('required')">Please enter a password</mat-error> -->
+                        <mat-error>Passwords must match</mat-error>
+
+                        <mat-hint>Use 8 or more characters with atleast one letter, number & symbol</mat-hint>
+                    </mat-form-field>
+                </div>
+                
 
                 <!-- Sign in button -->
-                <button (click)="register(userEmail.value, userPassword.value, userConfirmPassword.value)" class="register-button" mat-raised-button color="primary">Register</button>
-            </div>
+                <button (click)="register(userEmailControl.value, userPasswordControl.value, userPasswordConfirmControl.value)" class="register-button" mat-raised-button color="primary">Register</button>
+            </form>
             <div class="sign-in-instead">
                 <a href="/login"> Sign in instead</a>
             </div>
