--- a/src/app/nonprofit/nonprofit-page/nonprofit-page.component.scss
+++ b/src/app/nonprofit/nonprofit-page/nonprofit-page.component.scss
@@ -1,5 +1,5 @@
-.title {
-    text-align: center;
+.icon {
+    font-size: 30px;
 }
 
 // TODO: adding height to the parent container and just using flex is the way to go: need to fix home.component styling 
@@ -8,10 +8,69 @@
     height: 100%;
     display: flex; 
     flex-direction: column;
-    .favorites-container {
+    .nonprofit-toolbar {
+        display: flex;
+        flex-direction: row;
+        flex: 0.15;
+        background-color: teal;
+        justify-content: center;
+        .title-box {
+            // nested flexbox to align title text properly in center
+            display: flex;
+            flex: 0.15 0.25 auto;
+            background-color: silver;
+            margin: 1%;
+            border-radius: 15px;
+            align-items: center;
+            justify-content: center;
+            font-size: 25px;
+        }
+        .links-box {
+            display: flex;
+            flex-direction: row;
+            flex: 0.15 0.2 auto;
+            background-color: silver;
+            margin: 1%;
+            border-radius: 15px;
+            align-items: center;
+            justify-content: center;
+            .column {
+                display: flex; 
+                flex-direction: column;
+                align-items: center;
+            }
+            .links-btn {
+                font-size: 15px;
+                flex: 0.5;
+            }
+        }
+        .donate-box {
+            display: flex;
+            flex-direction: column;
+            flex: 0.05;
+            background-color: white;
+            margin: 1%;
+            border-radius: 15px;
+            align-items: center;
+            justify-content: center;
+            font-size: 15px;
+            .column {
+                display: flex; 
+                flex-direction: column;
+                align-items: center;
+            }
+        }
+    }
+
+    .sidenav-container {
+        display: flex;
         flex: 1;
-        background-color: silver;
-        margin: 5%;
-        border-radius: 1%;
+        background-color: peachpuff;
+        .nonprofit-container {
+            flex: 0.85;
+            background-color: silver;
+            margin: 2%;
+            border-radius: 15px;
+        }
     }
 }
