--- a/src/app/nonprofit/nonprofit-page/nonprofit-page.component.scss
+++ b/src/app/nonprofit/nonprofit-page/nonprofit-page.component.scss
@@ -5,6 +5,11 @@
 // TODO: adding height to the parent container and just using flex is the way to go: need to fix home.component styling 
 // and other components where the height is constantly cascaded (bad practice)
 .main-container {
+    .column {
+        display: flex; 
+        flex-direction: column;
+        align-items: center;
+    }
     height: 100%;
     display: flex; 
     flex-direction: column;
@@ -34,11 +39,6 @@
             border-radius: 15px;
             align-items: center;
             justify-content: center;
-            .column {
-                display: flex; 
-                flex-direction: column;
-                align-items: center;
-            }
             .links-btn {
                 font-size: 15px;
                 flex: 0.5;
@@ -54,23 +54,59 @@
             align-items: center;
             justify-content: center;
             font-size: 15px;
-            .column {
-                display: flex; 
-                flex-direction: column;
-                align-items: center;
-            }
+        }
+        .toggle-box {
+            display: flex;
+            flex: 0.1;
+            align-items: center;
+            justify-content: center;
+            margin-left: auto;
+            margin-right: 1%;
         }
     }
 
+    // wrapper for angular sidenav container overall
     .sidenav-container {
-        display: flex;
         flex: 1;
         background-color: peachpuff;
-        .nonprofit-container {
-            flex: 0.85;
+
+        // container for sidebar contents (ratings, etc.)
+        .sidebar-container {
+            flex: 1;
             background-color: silver;
-            margin: 2%;
-            border-radius: 15px;
+            .card-container {
+                height: 100%;
+                margin-left: 2%;
+                margin-right: 2%;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-evenly;
+                .rating-card {
+                    flex: 0.2;
+                }
+                .mission-card{
+                    flex: 0.2;
+                }
+                .efficiency-card{
+                    flex: 0.2;
+                }
+                .compensation-card{
+                    flex: 0.2;
+                }
+            }
+        }
+
+        // angular material wrapper for sidenav main content
+        .sidenav-content-container {
+            flex: 1;
+            // container for the "main content" of nonprofit page
+            .nonprofit-container {
+                flex: 1;
+                margin: 2%;
+                height: 100%;
+                background-color: silver;
+                border-radius: 15px;
+            }
         }
     }
 }
