--- a/src/app/user/register/register.component.scss
+++ b/src/app/user/register/register.component.scss
@@ -11,23 +11,30 @@
         border-radius: 0.50rem;
         display: flex;
         background-color: #FBFAF5;
-        height: 30rem;
+        height: 35rem;
         width: 30rem;
-        max-width: 95%;
-        max-height: 80%;
+        max-width: 90%;
+        max-height: 93%;
         margin: auto;
         opacity: 97%;
         overflow: auto;
 
         .register-inputs-container {
             width: 90%;
-            height: 60%;
+            height: 70%;
             margin: auto;
 
             .register-title {
                 width: 100%;
                 text-align: center;
 
+            }
+
+            .register-error {
+                text-align: center;
+                width: 100%;
+                font-weight: bold;
+                color: #ff0033;
             }
 
             .register-inputs {
