adding rating styling

--- a/src/app/nonprofit/nonprofit-page/nonprofit-page.component.html
+++ b/src/app/nonprofit/nonprofit-page/nonprofit-page.component.html
@@ -42,11 +42,9 @@
             [opened]="sidenavOpened">
             <div class="card-container">
                 <mat-card class="rating-card">
-                    <mat-card-header>
-                        <mat-card-title>Rating</mat-card-title>
-                    </mat-card-header>
                     <mat-card-content>
-                        <p>{{getNonprofitRating()}}</p>
+                        <p class="rating-title">Rating</p>
+                        <p class="rating-value">{{getNonprofitRating()}}</p>
                     </mat-card-content>
                 </mat-card>
     
